<resources>
    <string name="app_name">FirstAppli</string>
    <string name="hello">Coucou XML</string>
    <string name="convertisseur">Converter</string>
    <string name="convertir">Convert</string>
    <string name="monnaie_convertir">Money to convert</string>
    <string name="monnaie_courante">Current money</string>
    <string name="montant">Amount:</string>

    <string name="title_activity_resultat_conversion" translatable="false">resultatConversion</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="txtResultat" translatable="false" />
    <string name="options" translatable="false">Options</string>
    <string name="quitter">Quitter</string>
    <string name="item2">Item2</string>
    <string name="item1">Item1</string>
    <string name="changer_fond">changer fond</string>
    <string name="configuration">configuration</string>
    <string name="changer_langue">changer langue</string>
    <string name="changer_orientation">Changer orientation</string>
    <string name="portrait" translatable="false">Portrait</string>
    <string name="capteur">par capteur</string>
    <string name="textview" translatable="false">title</string>
    <string name="dateRemerciement">date</string>
    <string name="goodbye" translatable="false">Merci d\'avoir utilisé l\'appli!</string>


</resources>
