<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/configuration" >
        <menu>
            <item
                android:id="@+id/menuChangerLangue"

                android:title="@string/changer_langue"
                app:showAsAction="withText"
                tools:icon="@drawable/option" />
            <item
                android:id="@+id/menuChangerFond"
                android:title="@string/changer_fond" />
            <item
                android:id="@+id/switchOrientation"
                android:title="@string/capteur"
                app:actionLayout="@layout/switch_item"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:id="@+id/menuQuitter"
        android:title="@string/quitter" ></item>
</menu>