<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:theme="@android:style/Animation.Translucent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="99dp"
        android:gravity="center"
        android:text="@string/convertisseur" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monnaie_courante" />

        <Spinner
            android:id="@+id/spinDepart"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monnaie_convertir" />

        <Spinner
            android:id="@+id/spinArrivee"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/montant" />

        <EditText
            android:id="@+id/editMontant"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="219dp"
        android:layout_height="75dp"

        android:layout_gravity="center"
        android:onClick="calculer"
        android:text="@string/convertir" />

</LinearLayout>